update dependencies, contributors

--- a/_data/contributors.yml
+++ b/_data/contributors.yml
@@ -1,7 +1,7 @@
 - github_username: mnyrop
-  icons: 📖📝🐛💻🎨🔌✅⚠️📢
+  icons: 🚧📖📝🐛💻🎨🔌✅⚠️📢🚇
 - github_username: elotroalex
-  icons: 📖🐛💻🎨📢✅📢
+  icons: 🚧📖🐛💻🎨✅📢
 - github_username: tcatapano
   icons: 💻🎨💬
 - github_username: susannalles
@@ -32,3 +32,9 @@
   icons: 🤔
 - github_username: ktakahata
   icons: 💡
+- github_username: pbinkley
+  icons: 💡💻📖🤔📢📋
+- github_username: KitaitiMakoto
+  icons: 💻
+- github_username: awoods
+  icons: 🤔💻💡🚇
