--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 title:            'Minicomp Wiki'
+url:              'minicomp.github.io'
 baseurl:          '/wiki'
 
 theme:            just-the-docs
