--- a/.github/workflows/ghpages-deploy.yml
+++ b/.github/workflows/ghpages-deploy.yml
@@ -20,7 +20,7 @@ jobs:
       - name: test
         run: bundle exec rake test
       - name: build
-        run: bundle exec rake reset && bundle exec rake build
+        run: JEKYLL_ENV=production bundle exec rake reset && bundle exec rake build
       - name: deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
